fix: prattle-not chat spacing (fixes #153)

--- a/src/prattlenot/styles.scss
+++ b/src/prattlenot/styles.scss
@@ -13,6 +13,10 @@
 		height: 100%;
 		width: 100%;
 	}
+
+	& > div[tabindex="0"]:last-child {
+		height: auto;
+	}
 }
 
 .ffz-pn--list {
